# C-Samples

./: README.md
P2/: CMakeLists.txt  MyAfterInverse.txt  P2.exe.stackdump  after1d.txt  after2d.txt
P2/P2/: Complex.cc  fft2d.cc
SuperSnake/: SuperSnake.sln  readme.txt
SuperSnake/Debug/: SuperSnake.ilk
SuperSnake/SuperSnake/: Board.cpp  Board.h  Game.cpp  Parameter.h  Snake.cpp  Snake.h  SuperSnake.vcxproj  SuperSnake.vcxproj.filters  draw.cpp  draw.h  movement.cpp  movement.h
SuperSnake/SuperSnake/Debug/: vc141.idb
SuperSnake/SuperSnake/Debug/SuperSnake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SuperSnake.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
e2/: c2.cc  e2.h  main.cc
vec3/: vec3.h
